Release PowerSaveBlock on PeerConnection stop instead of removal. Removal occurs at GC time, which may result in an undeterminate amount of time with power saving blocked.

Drive-by: fix a couple of lint issues.

BUG=612294

Review-Url: https://codereview.chromium.org/2502413002
Cr-Commit-Position: refs/heads/master@{#432920}

Former-commit-id: 542c74f6d402696e770d70a8716dbcf0ffe53094